Update print statement from 'Hello' to 'Goodbye'

--- a/ThatPage.html
+++ b/ThatPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Interaction Simulator (Human Bridge)</title>
+    <title>RE Investment AI Analytics</title>
     <style>
         :root {
             --bg-app: #0f172a;
@@ -222,7 +222,7 @@
     <div style="display:flex; align-items:center; gap: 12px;">
         <div style="width: 24px; height: 24px; background: var(--primary); border-radius: 4px;"></div>
         <div>
-            <h1>Investigator Bridge</h1>
+            <h1>RE Investment AI Analytics</h1>
             <span style="color: var(--text-muted); font-size: 0.8rem;">Rapid Prototype & Simulation Tool</span>
         </div>
     </div>
@@ -534,4 +534,5 @@ Do NOT use JSON. Do NOT use code blocks.`;
 </script>
 
 </body>
+
 </html>
